--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,6 +27,7 @@ requirements:
     - r-cli >=3.6.1
     - r-dplyr >=1.1.2
     - r-glue >=1.6.2
+    - r-lifecycle >=1.0.3
     - r-rlang >=1.1.1
     - r-tidyr >=1.3.0
     - r-tidyselect >=1.2.0
@@ -35,6 +36,7 @@ requirements:
     - r-cli >=3.6.1
     - r-dplyr >=1.1.2
     - r-glue >=1.6.2
+    - r-lifecycle >=1.0.3
     - r-rlang >=1.1.1
     - r-tidyr >=1.3.0
     - r-tidyselect >=1.2.0
@@ -45,7 +47,8 @@ test:
     - "\"%R%\" -e \"library('cards')\""  # [win]
 
 about:
-  home: https://github.com/insightsengineering/cards, https://insightsengineering.github.io/cards/
+  home: https://insightsengineering.github.io/cards/
+  dev_url: https://github.com/insightsengineering/cards
   license: Apache-2.0
   summary: Construct CDISC (Clinical Data Interchange Standards Consortium) compliant Analysis Results Data objects. These objects are used and re-used to construct summary tables, visualizations, and written reports. The package also exports utilities for working with these objects and creating new Analysis Results Data
     objects.
